--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Reid Carlberg",
   "license": "MIT",
   "dependencies": {
+    "jsonfile": "^2.0.0",
     "lodash": "^3.2.0",
     "readline": "0.0.7",
     "say": "^0.6.0"
